Gestion du sous menu de tri

--- a/res/menu/menu_playlists.xml
+++ b/res/menu/menu_playlists.xml
@@ -6,8 +6,12 @@
         android:actionViewClass="android.widget.SearchView"
         android:icon="@android:drawable/ic_menu_search"
         android:showAsAction="always"
-        android:title="@string/menu_search">
+        android:title="@string/menu_search"/>
+    <item
+        android:icon="@drawable/ic_action_collections_sort_by_size"
+        android:title="@string/menu_trier">
         <menu>
+                  
             <item
 		        android:id="@+id/tri_date"
 		        android:title="@string/tri_date"/>
@@ -19,11 +23,6 @@
 		        android:title="@string/tri_nombre"/>
 		</menu>
 		</item>	               
-	<item
-        android:id="@+id/menu_trier"
-        android:icon="@drawable/ic_action_collections_sort_by_size"
-        android:showAsAction="always"
-        android:title="@string/menu_trier"/>
     <item
         android:id="@+id/menu_preferences"
         android:showAsAction="never"
