--- a/res/menu/menu_video.xml
+++ b/res/menu/menu_video.xml
@@ -4,6 +4,7 @@
     
     <item
         android:id="@+id/menu_share"
+        android:actionProviderClass="android.widget.ShareActionProvider"
         android:icon="@android:drawable/ic_menu_share"
         android:showAsAction="always"
         android:title="@string/menu_share"/>
