Ajout des layout, des items list, des affichages de resultat, reglages des problemes de youtube

--- a/res/layout/activity_video.xml
+++ b/res/layout/activity_video.xml
@@ -11,6 +11,12 @@
         android:layout_margin="5dp"
         android:text="@string/search_query"
         android:textSize="12sp" />
+        
+        <ListView
+        android:id="@+id/videoList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    	</ListView>
     
 
 </LinearLayout>
