--- a/res/layout/activity_resultat_video.xml
+++ b/res/layout/activity_resultat_video.xml
@@ -3,7 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
+		<TextView
+		android:id="@+id/search_query"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_margin="5dp"
+		android:text="@string/search_query"
+		android:textSize="12sp" />
         <ListView
         android:id="@+id/videoList"
         android:layout_width="match_parent"
