--- a/res/layout/activity_resultat_video.xml
+++ b/res/layout/activity_resultat_video.xml
@@ -10,6 +10,14 @@
 		android:layout_margin="5dp"
 		android:text="@string/search_query"
 		android:textSize="12sp" />
+		
+		<ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_margin="10dp"
+        android:layout_height="wrap_content" /> 
+        
         <ListView
         android:id="@+id/videoList"
         android:layout_width="match_parent"
