--- a/res/layout/layout_item.xml
+++ b/res/layout/layout_item.xml
@@ -4,33 +4,35 @@
     android:id="@+id/item_video"
     android:layout_width="match_parent"
     android:layout_height="150dp" >
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="90dp"
-        android:text="Titre"
-        android:textColor="#AAA"
-        android:textSize="15sp" />
-
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/title"
-        android:layout_centerVertical="true"
-        android:text="Description"
-        android:textColor="#AAA"
-        android:textSize="15sp" />
     
     <ImageView
         android:id="@+id/videoIcon"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" />
+        android:layout_height="match_parent"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="95dp"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Titre"
+            android:textColor="#AAA"
+            android:textStyle="bold"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Description"
+            android:textColor="#AAA"
+            android:textSize="14sp" />
+    </LinearLayout>
 
 </RelativeLayout>
