--- a/res/layout/layout_item.xml
+++ b/res/layout/layout_item.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/item_video"
-    android:layout_width="match_parent"
-    android:layout_height="150dp" >
-    
+    android:layout_width="fill_parent"
+    android:orientation="horizontal" 
+    android:layout_height="fill_parent" >
+
     <ImageView
         android:id="@+id/videoIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
+        android:layout_width="0dp" 
+        android:layout_weight=".30"
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp" 
         android:layout_height="wrap_content"
+        android:layout_weight=".60"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="95dp"
         android:orientation="vertical" >
 
         <TextView
@@ -35,4 +37,11 @@
             android:textSize="14sp" />
     </LinearLayout>
 
-</RelativeLayout>
+	    <ImageView
+	        android:id="@+id/website"
+	        android:layout_width="0dp" 
+        android:layout_height="fill_parent"
+        android:layout_weight=".10"
+	        android:layout_gravity="top" />
+
+</LinearLayout>
