Liaison playlist bdd

--- a/res/layout/activity_recherche.xml
+++ b/res/layout/activity_recherche.xml
@@ -60,4 +60,12 @@
         android:checked="true" 
         android:layout_marginLeft="35dp"/>
     
+    <ListView
+        android:id="@+id/historiqueList"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="20dp"
+        android:textSize="20sp" 
+        android:layout_height="wrap_content" >
+    </ListView>
+    
 </LinearLayout>
