--- a/res/layout/layout_item_playlist.xml
+++ b/res/layout/layout_item_playlist.xml
@@ -3,7 +3,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/item_video"
     android:layout_width="match_parent"
-    android:layout_height="100dp" >
+    android:layout_height="65dp" >
 
     <TextView
         android:id="@+id/playlist_titre"
@@ -13,21 +13,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="5dp"
         android:text="Titre"
-        android:textColor="#AAA"
+        android:textColor="#111"
         android:textSize="15sp" />
-
-    <TextView
-        android:id="@+id/playlist_nbVideos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:text="Nb vidéos"
-        android:textColor="#AAA"
-        android:textSize="15sp" />
-    
 
 
 </RelativeLayout>
